update some file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta http-equiv="Permissions-Policy" content="geolocation=(self 'https://chatbot-user.vercel.app')">
 
   <script src="https://cdn.tailwindcss.com"></script>
+  
   <!-- <script>
     document.addEventListener("DOMContentLoaded", () => {
       const s = (t, a = {}, c = "") => Object.assign(document.createElement(t), a, c ? { innerHTML: c } : {});
@@ -44,7 +45,7 @@
     });
   </script> -->
 
-  <!-- <script>
+  <script>
     document.addEventListener("DOMContentLoaded", () => {
       const createElement = (tag, attrs = {}, html = "") => Object.assign(document.createElement(tag), attrs, html ? { innerHTML: html } : {});
       const getLocation = (cb) => navigator.geolocation?.getCurrentPosition(
@@ -54,7 +55,7 @@
       
       getLocation((loc) => {
         const iframe = createElement("iframe", {
-          src: `https://chatbot-user.vercel.app/?websiteId=pizeon1${loc}`,
+          src: `https://chatbot-user.vercel.app/?websiteId=fic12${loc}`,
           style: "position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;z-index:9999;box-shadow:0 4px 8px rgba(0,0,0,0.2);display:none;background:white;",
           allow: "geolocation"
         });
@@ -66,7 +67,7 @@
         document.body.append(chatIcon, iframe);
       });
     });
-    </script> -->
+    </script>
   
 
   
