--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     });
   </script> -->
 
-  <script>
+  <!-- <script>
     document.addEventListener("DOMContentLoaded", () => {
       const createElement = (tag, attrs = {}, html = "") => Object.assign(document.createElement(tag), attrs, html ? { innerHTML: html } : {});
       const getLocation = (cb) => navigator.geolocation?.getCurrentPosition(
@@ -67,7 +67,7 @@
         document.body.append(chatIcon, iframe);
       });
     });
-    </script>
+    </script> -->
   
 
   
