update package json

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
   
-  <script>
+  <!-- <script>
     document.addEventListener("DOMContentLoaded", () => {
       const s = (t, a = {}, c = "") => Object.assign(document.createElement(t), a, c ? { innerHTML: c } : {});
       const iframe = s("iframe", { src: "https://chatbot-user.vercel.app/?websiteId=fic12", style: "position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;z-index:9999;box-shadow:0 4px 8px rgba(0,0,0,0.2);display:none;background:white;" });
@@ -18,7 +18,7 @@
       chatIcon.addEventListener("click", () => { iframe.style.display = iframe.style.display === "none" ? "block" : "none"; });
       document.body.append(chatIcon, iframe);
     });
-  </script>
+  </script> -->
 
 
   <!-- <script>
