--- a/index.html
+++ b/index.html
@@ -3,80 +3,59 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/picon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>pizeonfly</title>
   <meta http-equiv="Permissions-Policy" content="geolocation=(self 'https://chatbot-user.vercel.app')">
 
   <script src="https://cdn.tailwindcss.com"></script>
   
   <!-- <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const s = (t, a = {}, c = "") => Object.assign(document.createElement(t), a, c ? { innerHTML: c } : {});
-      const iframe = s("iframe", { src: "https://chatbot-user.vercel.app/?websiteId=fic12", style: "position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;z-index:9999;box-shadow:0 4px 8px rgba(0,0,0,0.2);display:none;background:white;" });
-      const chatIcon = s("div", { className: "chat", style: "position:fixed;bottom:20px;right:20px;width:64px;height:64px;background:#1950ff;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;z-index:10000;" }, `<svg width="30" height="30" fill="#fff"><circle cx="15" cy="15" r="12" stroke="none"></circle><text x="9" y="20" font-size="12"></text></svg>`);
-      chatIcon.addEventListener("click", () => { iframe.style.display = iframe.style.display === "none" ? "block" : "none"; });
-      document.body.append(chatIcon, iframe);
+    document.addEventListener('DOMContentLoaded',()=>{
+      const i=document.createElement('iframe'),c=document.createElement('div'),
+      chat='<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>',
+      close='<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>';
+      i.src='https://chatbot-user.vercel.app/?websiteId=hisab1';i.style.cssText='position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;border-radius:12px;box-shadow:0 8px 24px rgba(0,0,0,.15);display:none;background:#fff;z-index:9999;transition:.3s ease';
+      c.innerHTML=chat;c.style.cssText='position:fixed;bottom:20px;right:20px;width:56px;height:56px;background:#5992ee;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 4px 12px rgba(89,146,238,.4);z-index:10000;transition:.3s ease';
+      c.onmouseover=()=>{c.style.transform='scale(1.1)';c.style.boxShadow='0 6px 16px rgba(89,146,238,.5)'};
+      c.onmouseout=()=>{c.style.transform='scale(1)';c.style.boxShadow='0 4px 12px rgba(89,146,238,.4)'};
+      c.onclick=()=>{const v=i.style.display==='block';i.style.display=v?'none':'block';i.style.transform=v?'translateY(20px)':'translateY(0)';i.style.opacity=v?'0':'1';c.style.transform=v?'rotate(0deg)':'rotate(360deg)';setTimeout(()=>c.innerHTML=v?chat:close,150)};
+      document.body.append(i,c);
+    });
+  </script> -->
+  <!-- <script>
+    document.addEventListener('DOMContentLoaded',()=>{
+      const i=document.createElement('iframe'),c=document.createElement('div'),
+      chat='<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>',
+      close='<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>';
+      i.src='http://localhost:5174/?websiteId=fic12';i.style.cssText='position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;border-radius:12px;box-shadow:0 8px 24px rgba(0,0,0,.15);display:none;background:#fff;z-index:9999;transition:.3s ease';
+      c.innerHTML=chat;c.style.cssText='position:fixed;bottom:20px;right:20px;width:56px;height:56px;background:#f21b22;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 4px 12px rgba(89,146,238,.4);z-index:10000;transition:.3s ease';
+      c.onmouseover=()=>{c.style.transform='scale(1.1)';c.style.boxShadow='0 6px 16px rgba(89,146,238,.5)'};
+      c.onmouseout=()=>{c.style.transform='scale(1)';c.style.boxShadow='0 4px 12px rgba(89,146,238,.4)'};
+      c.onclick=()=>{const v=i.style.display==='block';i.style.display=v?'none':'block';i.style.transform=v?'translateY(20px)':'translateY(0)';i.style.opacity=v?'0':'1';c.style.transform=v?'rotate(0deg)':'rotate(360deg)';setTimeout(()=>c.innerHTML=v?chat:close,150)};
+      document.body.append(i,c);
     });
   </script> -->
 
 
   <!-- <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const createElement = (tag, attrs = {}, html = "") => Object.assign(document.createElement(tag), attrs, html ? { innerHTML: html } : {});
-      const getLocation = (cb) => navigator.geolocation?.getCurrentPosition(
-        ({ coords }) => cb(`&latitude=${coords.latitude}&longitude=${coords.longitude}`),
-        () => cb("")
-      ) || cb("");
-      
-      getLocation((loc) => {
-        const iframe = createElement("iframe", {
-          src: `https://chatbot-user.vercel.app/?websiteId=fic12${loc}`,
-          style: "position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;z-index:9999;box-shadow:0 4px 8px rgba(0,0,0,0.2);display:none;background:white;",
-          allow: "geolocation"
-        });
-        const chatIcon = createElement("div", {
-          className: "chat",
-          style: "position:fixed;bottom:20px;right:20px;width:64px;height:64px;background:#1950ff;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;z-index:10000;",
-          onclick: () => (iframe.style.display = iframe.style.display === "none" ? "block" : "none")
-        }, `<svg width="30" height="30" fill="#fff"><circle cx="15" cy="15" r="12"></circle><text x="9" y="20" font-size="12">Chat</text></svg>`);
-        document.body.append(chatIcon, iframe);
-      });
+    document.addEventListener('DOMContentLoaded',()=>{
+      const i=document.createElement('iframe'),c=document.createElement('div'),
+      chat='<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>',
+      close='<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>';
+      i.src='http://localhost:5174/?websiteId=pizeon1';i.style.cssText='position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;border-radius:12px;box-shadow:0 8px 24px rgba(0,0,0,.15);display:none;background:#fff;z-index:9999;transition:.3s ease';
+      c.innerHTML=chat;c.style.cssText='position:fixed;bottom:20px;right:20px;width:56px;height:56px;background:#0498fd;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 4px 12px rgba(89,146,238,.4);z-index:10000;transition:.3s ease';
+      c.onmouseover=()=>{c.style.transform='scale(1.1)';c.style.boxShadow='0 6px 16px rgba(89,146,238,.5)'};
+      c.onmouseout=()=>{c.style.transform='scale(1)';c.style.boxShadow='0 4px 12px rgba(89,146,238,.4)'};
+      c.onclick=()=>{const v=i.style.display==='block';i.style.display=v?'none':'block';i.style.transform=v?'translateY(20px)':'translateY(0)';i.style.opacity=v?'0':'1';c.style.transform=v?'rotate(0deg)':'rotate(360deg)';setTimeout(()=>c.innerHTML=v?chat:close,150)};
+      document.body.append(i,c);
     });
   </script> -->
-
-  <!-- <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const createElement = (tag, attrs = {}, html = "") => Object.assign(document.createElement(tag), attrs, html ? { innerHTML: html } : {});
-      const getLocation = (cb) => navigator.geolocation?.getCurrentPosition(
-        ({ coords }) => cb(`&latitude=${coords.latitude}&longitude=${coords.longitude}`),
-        () => cb("")
-      ) || cb("");
-      
-      getLocation((loc) => {
-        const iframe = createElement("iframe", {
-          src: `https://chatbot-user.vercel.app/?websiteId=fic12${loc}`,
-          style: "position:fixed;bottom:100px;right:20px;width:350px;height:500px;border:none;z-index:9999;box-shadow:0 4px 8px rgba(0,0,0,0.2);display:none;background:white;",
-          allow: "geolocation"
-        });
-        const chatIcon = createElement("div", {
-          className: "chat",
-          style: "position:fixed;bottom:20px;right:20px;width:64px;height:64px;background:#1950ff;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;z-index:10000;",
-          onclick: () => (iframe.style.display = iframe.style.display === "none" ? "block" : "none")
-        }, `<svg width="30" height="30" fill="#fff"><circle cx="15" cy="15" r="12"></circle><text x="9" y="20" font-size="12">Chat</text></svg>`);
-        document.body.append(chatIcon, iframe);
-      });
-    });
-    </script> -->
-  
-
-  
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  
 </body>
 
 </html>
